--- a/hello-spring/build.gradle
+++ b/hello-spring/build.gradle
@@ -18,10 +18,17 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+	implementation 'org.springframework.boot:spring-boot-test:2.7.13'
+	implementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
+	implementation 'org.junit.jupiter:junit-jupiter:5.9.2'
+	implementation 'org.assertj:assertj-core:3.24.2'
 	testImplementation ('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	runtimeOnly 'com.h2database:h2'
+
 }
 
 test {
