--- a/hello-spring/build.gradle
+++ b/hello-spring/build.gradle
@@ -18,16 +18,17 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-	implementation 'org.springframework.boot:spring-boot-test:2.7.13'
-	implementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
-	implementation 'org.junit.jupiter:junit-jupiter:5.9.2'
-	implementation 'org.assertj:assertj-core:3.24.2'
+	//implementation 'org.springframework.boot:spring-boot-starter-jdbc'  //jdbc 관련 설정. jpa 설정시 굳이 이걸 쓸 이유가 없음
+	implementation 'org.springframework.boot:spring-boot-test:2.7.13' //test 설정
+	implementation 'org.junit.jupiter:junit-jupiter-api:5.9.2' //test - junit5 api
+	implementation 'org.junit.jupiter:junit-jupiter:5.9.2' //test - junit5
+	implementation 'org.assertj:assertj-core:3.24.2'//assertj 쓰려고.
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' //jpa 설정
 	testImplementation ('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'com.h2database:h2'
+	runtimeOnly 'com.h2database:h2' //h2 데이터베이스
 
 }
 
