--- a/hello-spring/src/main/resources/application.properties
+++ b/hello-spring/src/main/resources/application.properties
@@ -1,5 +1,12 @@
+#devtools
 spring.devtools.restart.enabled = true
 spring.devtools.livereload.enabled = true
+
+# datasource
 spring.datasource.url=jdbc:h2:tcp://localhost/~/test
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
+
+# jpa
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
